--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,22 @@
   </head>
   <body>
 
+  <div class="container">
+    <div class="row">
+      <h1 class="text-center">Euler Reward Project</h1>
+    </div>
+    <div id="petsRow" class="row">
+      <!-- PETS LOAD HERE -->
+    </div>
+  </div>
+  <div id="petTemplate" style="display: none;">
+    <div class="panel-body">
+      <strong>Problem No.</strong>: <span class="problem-no">1</span><br/>
+      <strong>Problem Answer</strong>: <span class="problem-ans" data-id= 1  >2333</span><br/>
+      <button class = "btn btn-default btn-submit" type = "button">Submit </button>
+    </div>
+  </div>
 
-
-  <button class = "btn btn-default btn-submit" type = "button">Submit </button>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
