your euler coin..

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
 
   <div class="container">
     <div class="row">
-      <h1 class="text-center">Euler Reward Project</h1>
+      <h1 class = "text-center">Euler Reward Project</h1>
+      <h2>You have:</h2><span class="my-balance" ><strong></strong></span><h2>EulerCoins</h2></br>
     </div>
     <div id="petsRow" class="row">
       <!-- PETS LOAD HERE -->
