--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Pete's Pet Shop</title>
-
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,13 +19,13 @@
   <div class="container">
     <div class="row">
       <h1 class = "text-center">Euler Reward Project</h1>
-      <h2>You have:</h2><span class="my-balance" ><strong></strong></span><h2>EulerCoins</h2></br>
+      <h3 class = "text-center"><span>You have: </span><span class="my-balance" ><strong></strong></span><span> EulerCoins</span></h3></br>
     </div>
-    <div id="petsRow" class="row">
+    <div id="Row" class="row">
       <!-- PETS LOAD HERE -->
     </div>
   </div>
-  <div id="petTemplate" style="display: none;">
+  <div id="Template" style="display: none;">
     <div class="panel-body">
       <strong>Problem No.</strong>: <span class="problem-no">1</span><br/>
       <strong>Problem Answer</strong>: <span class="problem-ans" data-id= 1  >2333</span><br/>
